<?xml version="1.0"?>
<package format="2">
  <name>volta_carrot</name>
  <version>0.0.0</version>
  <description>A global path planner plugin for the Turtlebot that uses an RRT algorithm.</description>

  <author email="jmhoward@umd.edu">Jessica Howard</author>
  <maintainer email="jmhoward@umd.edu">Jessica Howard</maintainer>
  <license>BSD 3-clause</license>
  <url type="repository">https://github.com/jeshoward/turtlebot_rrt</url>
  
  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>  
  <build_depend>roslint</build_depend>  
  <build_depend>tf</build_depend>  
  <build_depend>nav_core</build_depend>
  <build_depend>costmap_2d</build_depend>
  <build_depend>base_local_planner</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>eigen</build_depend>
  <build_depend>visualization_msgs</build_depend>
  
  <exec_depend>roscpp</exec_depend>
  <exec_depend>pluginlib</exec_depend>
  <exec_depend>costmap_2d</exec_depend>
  <exec_depend>base_local_planner</exec_depend>
  <exec_depend>nav_core</exec_depend>   
  <exec_depend>tf</exec_depend>
  <exec_depend>eigen</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>

  <export>
    <nav_core plugin="${prefix}/global_planner_plugin.xml"/>
  </export>
</package>
